--- a/index.html
+++ b/index.html
@@ -343,28 +343,28 @@
 /* Вставьте свои изображения. Для примера используются заглушки. */
 const data = {
   keycaps: [
-    {id:1, images:["https://i.imgur.com/1.png","https://i.imgur.com/2.png","https://i.imgur.com/3.png"], price:1200, desc:"Кейкап #1 — PBT, двойное литьё"},
-    {id:2, images:["https://i.imgur.com/4.png","https://i.imgur.com/5.png","https://i.imgur.com/6.png"], price:1300, desc:"Кейкап #2 — профиль Cherry"},
-    {id:3, images:["https://i.imgur.com/7.png","https://i.imgur.com/8.png","https://i.imgur.com/9.png"], price:1400, desc:"Кейкап #3 — матовая поверхность"},
-    {id:4, images:["https://i.imgur.com/10.png","https://i.imgur.com/11.png","https://i.imgur.com/12.png"], price:1250, desc:"Кейкап #4 — легенды MG"},
-    {id:5, images:["https://i.imgur.com/13.png","https://i.imgur.com/14.png","https://i.imgur.com/15.png"], price:1350, desc:"Кейкап #5 — RGB shine-through"},
-    {id:6, images:["https://i.imgur.com/16.png","https://i.imgur.com/17.png","https://i.imgur.com/18.png"], price:1450, desc:"Кейкап #6 — лимитированная серия"}
+    {id:1, images:["https://i.imgur.com/8cb4LyT.jpeg","https://i.imgur.com/2.png","https://i.imgur.com/3.png"], price:1200, desc:"Кейкап #1 — PBT, двойное литьё"},
+    {id:2, images:["https://i.imgur.com/yswuUCY.jpeg","https://i.imgur.com/5.png","https://i.imgur.com/6.png"], price:1300, desc:"Кейкап #2 — профиль Cherry"},
+    {id:3, images:["https://i.imgur.com/6QtIrU2.jpeg","https://i.imgur.com/8.png","https://i.imgur.com/9.png"], price:1400, desc:"Кейкап #3 — матовая поверхность"},
+    {id:4, images:["https://i.imgur.com/HkuASV2.jpeg","https://i.imgur.com/11.png","https://i.imgur.com/12.png"], price:1250, desc:"Кейкап #4 — легенды MG"},
+    {id:5, images:["https://i.imgur.com/nECsM2O.jpeg","https://i.imgur.com/14.png","https://i.imgur.com/15.png"], price:1350, desc:"Кейкап #5 — RGB shine-through"},
+    {id:6, images:["https://i.imgur.com/HZVY2bv.jpeg","https://i.imgur.com/17.png","https://i.imgur.com/18.png"], price:1450, desc:"Кейкап #6 — лимитированная серия"}
   ],
   switches: [
-    {id:1, img:"https://i.imgur.com/a1.png", price:500, sound:"https://actions.google.com/sounds/v1/door/door_knock_1.ogg", desc:"Свитч #1 — линейный 45g"},
-    {id:2, img:"https://i.imgur.com/a2.png", price:600, sound:"https://actions.google.com/sounds/v1/cartoon/clang_and_wobble.ogg", desc:"Свитч #2 — тактильный 55g"},
-    {id:3, img:"https://i.imgur.com/a3.png", price:550, sound:"https://actions.google.com/sounds/v1/cartoon/wood_plank_flicks.ogg", desc:"Свитч #3 — клики 60g"},
-    {id:4, img:"https://i.imgur.com/a4.png", price:530, sound:"https://actions.google.com/sounds/v1/cartoon/wood_plank_flicks.ogg", desc:"Свитч #4 — линейный 50g"},
-    {id:5, img:"https://i.imgur.com/a5.png", price:580, sound:"https://actions.google.com/sounds/v1/cartoon/clang_and_wobble.ogg", desc:"Свитч #5 — тактильный 62g"},
-    {id:6, img:"https://i.imgur.com/a6.png", price:520, sound:"https://actions.google.com/sounds/v1/cartoon/clang_and_wobble.ogg", desc:"Свитч #6 — тихий линейный"}
+    {id:1, img:"https://i.imgur.com/vqPDI2L.jpeg", price:500, sound:"https://actions.google.com/sounds/v1/door/door_knock_1.ogg", desc:"Свитч #1 — линейный 45g"},
+    {id:2, img:"https://i.imgur.com/HL6zN2i.jpeg", price:600, sound:"https://actions.google.com/sounds/v1/cartoon/clang_and_wobble.ogg", desc:"Свитч #2 — тактильный 55g"},
+    {id:3, img:"https://i.imgur.com/1KXQN7p.jpeg", price:550, sound:"https://actions.google.com/sounds/v1/cartoon/wood_plank_flicks.ogg", desc:"Свитч #3 — клики 60g"},
+    {id:4, img:"https://i.imgur.com/v3nyRUd.jpeg", price:530, sound:"https://actions.google.com/sounds/v1/cartoon/wood_plank_flicks.ogg", desc:"Свитч #4 — линейный 50g"},
+    {id:5, img:"https://i.imgur.com/8PjWYbt.jpeg", price:580, sound:"https://actions.google.com/sounds/v1/cartoon/clang_and_wobble.ogg", desc:"Свитч #5 — тактильный 62g"},
+    {id:6, img:"https://i.imgur.com/7Erwkvk.jpeg", price:520, sound:"https://actions.google.com/sounds/v1/cartoon/clang_and_wobble.ogg", desc:"Свитч #6 — тихий линейный"}
   ],
   bases: [
-    {id:1, images:["https://i.imgur.com/b1.png","https://i.imgur.com/b2.png","https://i.imgur.com/b3.png"], price:7000, material:"Алюминий", os:"Windows, Mac", connection:"Проводное", battery:"—", desc:"Основа #1 — TKL"},
-    {id:2, images:["https://i.imgur.com/b4.png","https://i.imgur.com/b5.png","https://i.imgur.com/b6.png"], price:7500, material:"Пластик", os:"Windows", connection:"Беспроводное", battery:"3000mAh", desc:"Основа #2 — полноразмер"},
-    {id:3, images:["https://i.imgur.com/b7.png","https://i.imgur.com/b8.png","https://i.imgur.com/b9.png"], price:7200, material:"Дерево", os:"Mac", connection:"Проводное", battery:"—", desc:"Основа #3 — 65%"},
-    {id:4, images:["https://i.imgur.com/b10.png","https://i.imgur.com/b11.png","https://i.imgur.com/b12.png"], price:8000, material:"Алюминий", os:"Windows, Mac", connection:"Беспроводное", battery:"4000mAh", desc:"Основа #4 — 75% hotswap"},
-    {id:5, images:["https://i.imgur.com/b13.png","https://i.imgur.com/b14.png","https://i.imgur.com/b15.png"], price:6800, material:"Пластик", os:"Windows", connection:"Проводное", battery:"—", desc:"Основа #5 — бюджет"},
-    {id:6, images:["https://i.imgur.com/b16.png","https://i.imgur.com/b17.png","https://i.imgur.com/b18.png"], price:6900, material:"Дерево", os:"Mac", connection:"Беспроводное", battery:"3500mAh", desc:"Основа #6 — винтаж"}
+    {id:1, images:["https://i.imgur.com/GVr4gGO.jpeg","https://i.imgur.com/b2.png","https://i.imgur.com/b3.png"], price:7000, material:"Алюминий", os:"Windows, Mac", connection:"Проводное", battery:"—", desc:"Основа #1 — TKL"},
+    {id:2, images:["https://i.imgur.com/5ltJ91F.jpeg","https://i.imgur.com/b5.png","https://i.imgur.com/b6.png"], price:7500, material:"Пластик", os:"Windows", connection:"Беспроводное", battery:"3000mAh", desc:"Основа #2 — полноразмер"},
+    {id:3, images:["https://i.imgur.com/2QfZGFR.jpeg","https://i.imgur.com/b8.png","https://i.imgur.com/b9.png"], price:7200, material:"Дерево", os:"Mac", connection:"Проводное", battery:"—", desc:"Основа #3 — 65%"},
+    {id:4, images:["https://i.imgur.com/U5S63KY.jpeg","https://i.imgur.com/b11.png","https://i.imgur.com/b12.png"], price:8000, material:"Алюминий", os:"Windows, Mac", connection:"Беспроводное", battery:"4000mAh", desc:"Основа #4 — 75% hotswap"},
+    {id:5, images:["https://i.imgur.com/DtfgLjz.jpeg","https://i.imgur.com/b14.png","https://i.imgur.com/b15.png"], price:6800, material:"Пластик", os:"Windows", connection:"Проводное", battery:"—", desc:"Основа #5 — бюджет"},
+    {id:6, images:["https://i.imgur.com/5kMDXpc.jpeg","https://i.imgur.com/b17.png","https://i.imgur.com/b18.png"], price:6900, material:"Дерево", os:"Mac", connection:"Беспроводное", battery:"3500mAh", desc:"Основа #6 — винтаж"}
   ]
 };
 
